# casine

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  CHANGELOG.MD  README.md  changelog.json  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  testing.sqlite3
src-tauri/icons/: icon.icns
src-tauri/migrations/2022-09-27-130218_houses/: up.sql
src-tauri/migrations/2022-09-27-141158_apartments/: down.sql  up.sql
src-tauri/migrations/2022-09-27-211954_guests/: down.sql  up.sql
src-tauri/migrations/2022-09-27-212524_groups/: up.sql
src-tauri/migrations/2022-09-27-213005_group_members/: up.sql
src-tauri/migrations/2022-09-27-213838_rents/: down.sql  up.sql
src-tauri/migrations/2022-09-27-215251_apartments_price/: down.sql  up.sql
src-tauri/migrations/2022-09-28-201025_documents/: up.sql
src-tauri/migrations/2023-03-22-183856_create_houses/: down.sql  up.sql
src-tauri/migrations/2023-03-22-183936_create_apartments/: up.sql
src-tauri/migrations/2023-04-09-175703_create_guests/: up.sql
src-tauri/migrations/2023-04-09-175735_create_groupz/: down.sql  up.sql
src-tauri/migrations/2023-04-09-175801_create_group_members/: down.sql  up.sql
src-tauri/migrations/2023-04-09-175823_create_rents/: up.sql
src-tauri/migrations/2023-04-09-175853_create_apartments_prices/: down.sql  up.sql
src-tauri/src/: commands.rs  db.rs  errors.rs  main copy.rs  main.rs  models.rs  schema.rs
src-tauri/src/commands/: db_commands.rs
(+110 files in other folders)
