[package]
name = "casine"
version = "0.1.0"
description = "Casine app"
authors = ["mitch"]
license = "MIT"
repository = "https://github.com/seve-andre/casine"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
# diesel
diesel = { version = "2.0.0", features = ["mysql", "chrono"] }
dotenvy = "0.15"

# thiserror
thiserror = "1.0"

# chrono
chrono = { version = "0.4", features = ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
